// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Modal/Modal Basic Modal 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <Component
    actions={
      Array [
        Object {
          "label": "Cancel",
          "onClick": [Function],
          "type": "cancel",
        },
        Object {
          "label": "Submit",
          "onClick": [Function],
          "type": "primary",
        },
      ]
    }
    ariaDescription="Modal description"
    onClose={[Function]}
    open={true}
    title="Modal Title"
  >
    <Portal
      containerInfo={
        <div>
          <div
            data-focus-guard="true"
            style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
            tabindex="0"
          />
          <div
            data-focus-guard="true"
            style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
            tabindex="1"
          />
          <div
            data-focus-lock-disabled="false"
          >
            <div
              aria-describedby="Modal description"
              aria-labelledby="Modal Title"
              class="modal__wrapper"
              role="dialog"
            >
              <div
                class="modal"
              >
                <header
                  class="modal__inner"
                >
                  <h1
                    class="modal__title"
                  >
                    Modal Title
                  </h1>
                </header>
                <section
                  class="modal__inner"
                >
                  <p
                    class="c-steel"
                  >
                    Modal Content
                  </p>
                </section>
                <footer
                  class="modal__footer bg-primary-lighter"
                >
                  <div
                    class="modal__button-group"
                  >
                    <div
                      class="modal__button_item"
                    >
                      <button
                        class="button cancel"
                      >
                        Cancel
                      </button>
                    </div>
                    <div
                      class="modal__button_item"
                    >
                      <button
                        class="button primary"
                      >
                        Submit
                      </button>
                    </div>
                  </div>
                </footer>
                <button
                  aria-label="Close"
                  class="modal__close"
                  tabindex="0"
                >
                  <span
                    class="ui-icon ui-medium"
                  >
                    <svg>
                      <use
                        xlink:href="#i-close"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            data-focus-guard="true"
            style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
            tabindex="0"
          />
        </div>
      }
    >
      <ForwardRef>
        <ForwardRef
          as="div"
          autoFocus={true}
          crossFrame={true}
          disabled={false}
          lockProps={Object {}}
          noFocusGuards={false}
          persistentFocus={false}
          returnFocus={false}
          sideCar={[Function]}
        >
          <div
            data-focus-guard={true}
            key="guard-first"
            style={
              Object {
                "height": "0px",
                "left": "1px",
                "overflow": "hidden",
                "padding": 0,
                "position": "fixed",
                "top": "1px",
                "width": "1px",
              }
            }
            tabIndex={0}
          />
          <div
            data-focus-guard={true}
            key="guard-nearest"
            style={
              Object {
                "height": "0px",
                "left": "1px",
                "overflow": "hidden",
                "padding": 0,
                "position": "fixed",
                "top": "1px",
                "width": "1px",
              }
            }
            tabIndex={1}
          />
          <SideEffect(FocusWatcher)
            autoFocus={true}
            crossFrame={true}
            disabled={false}
            id={Object {}}
            observed={
              <div
                data-focus-lock-disabled="false"
              >
                <div
                  aria-describedby="Modal description"
                  aria-labelledby="Modal Title"
                  class="modal__wrapper"
                  role="dialog"
                >
                  <div
                    class="modal"
                  >
                    <header
                      class="modal__inner"
                    >
                      <h1
                        class="modal__title"
                      >
                        Modal Title
                      </h1>
                    </header>
                    <section
                      class="modal__inner"
                    >
                      <p
                        class="c-steel"
                      >
                        Modal Content
                      </p>
                    </section>
                    <footer
                      class="modal__footer bg-primary-lighter"
                    >
                      <div
                        class="modal__button-group"
                      >
                        <div
                          class="modal__button_item"
                        >
                          <button
                            class="button cancel"
                          >
                            Cancel
                          </button>
                        </div>
                        <div
                          class="modal__button_item"
                        >
                          <button
                            class="button primary"
                          >
                            Submit
                          </button>
                        </div>
                      </div>
                    </footer>
                    <button
                      aria-label="Close"
                      class="modal__close"
                      tabindex="0"
                    >
                      <span
                        class="ui-icon ui-medium"
                      >
                        <svg>
                          <use
                            xlink:href="#i-close"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            }
            onActivation={[Function]}
            onDeactivation={[Function]}
            persistentFocus={false}
            returnFocus={[Function]}
            shards={Array []}
            sideCar={
              Object {
                "assignMedium": [Function],
                "assignSyncMedium": [Function],
                "options": Object {
                  "async": true,
                  "ssr": false,
                },
                "read": [Function],
                "useMedium": [Function],
              }
            }
          >
            <FocusWatcher
              autoFocus={true}
              crossFrame={true}
              disabled={false}
              id={Object {}}
              observed={
                <div
                  data-focus-lock-disabled="false"
                >
                  <div
                    aria-describedby="Modal description"
                    aria-labelledby="Modal Title"
                    class="modal__wrapper"
                    role="dialog"
                  >
                    <div
                      class="modal"
                    >
                      <header
                        class="modal__inner"
                      >
                        <h1
                          class="modal__title"
                        >
                          Modal Title
                        </h1>
                      </header>
                      <section
                        class="modal__inner"
                      >
                        <p
                          class="c-steel"
                        >
                          Modal Content
                        </p>
                      </section>
                      <footer
                        class="modal__footer bg-primary-lighter"
                      >
                        <div
                          class="modal__button-group"
                        >
                          <div
                            class="modal__button_item"
                          >
                            <button
                              class="button cancel"
                            >
                              Cancel
                            </button>
                          </div>
                          <div
                            class="modal__button_item"
                          >
                            <button
                              class="button primary"
                            >
                              Submit
                            </button>
                          </div>
                        </div>
                      </footer>
                      <button
                        aria-label="Close"
                        class="modal__close"
                        tabindex="0"
                      >
                        <span
                          class="ui-icon ui-medium"
                        >
                          <svg>
                            <use
                              xlink:href="#i-close"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              }
              onActivation={[Function]}
              onDeactivation={[Function]}
              persistentFocus={false}
              returnFocus={[Function]}
              shards={Array []}
              sideCar={
                Object {
                  "assignMedium": [Function],
                  "assignSyncMedium": [Function],
                  "options": Object {
                    "async": true,
                    "ssr": false,
                  },
                  "read": [Function],
                  "useMedium": [Function],
                }
              }
            />
          </SideEffect(FocusWatcher)>
          <div
            data-focus-lock-disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <div
              aria-describedby="Modal description"
              aria-labelledby="Modal Title"
              className="modal__wrapper"
              role="dialog"
            >
              <div
                className="modal"
              >
                <header
                  className="modal__inner"
                >
                  <h1
                    className="modal__title"
                  >
                    Modal Title
                  </h1>
                </header>
                <section
                  className="modal__inner"
                >
                  <p
                    className="c-steel"
                  >
                    Modal Content
                  </p>
                </section>
                <footer
                  className="modal__footer bg-primary-lighter"
                >
                  <div
                    className="modal__button-group"
                  >
                    <div
                      className="modal__button_item"
                      key="Cancel"
                    >
                      <button
                        className="button cancel"
                        onClick={[Function]}
                      >
                        Cancel
                      </button>
                    </div>
                    <div
                      className="modal__button_item"
                      key="Submit"
                    >
                      <button
                        className="button primary"
                        onClick={[Function]}
                      >
                        Submit
                      </button>
                    </div>
                  </div>
                </footer>
                <button
                  aria-label="Close"
                  className="modal__close"
                  onClick={[Function]}
                  tabIndex={0}
                >
                  <Icon
                    size="medium"
                    symbol="close"
                  >
                    <span
                      className="ui-icon ui-medium"
                    >
                      <svg>
                        <use
                          xlinkHref="#i-close"
                        />
                      </svg>
                    </span>
                  </Icon>
                </button>
              </div>
            </div>
          </div>
          <div
            data-focus-guard={true}
            style={
              Object {
                "height": "0px",
                "left": "1px",
                "overflow": "hidden",
                "padding": 0,
                "position": "fixed",
                "top": "1px",
                "width": "1px",
              }
            }
            tabIndex={0}
          />
        </ForwardRef>
      </ForwardRef>
    </Portal>
  </Component>
  <InlineSVG
    cacheRequests={true}
    src="/images/icons.svg"
    uniquifyIDs={false}
  />
</div>
`;

exports[`Storyshots Modal/Modal Full Screen Modal 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <Component
    actions={
      Array [
        Object {
          "label": "Cancel",
          "onClick": [Function],
          "type": "cancel",
        },
        Object {
          "label": "Submit",
          "onClick": [Function],
          "type": "primary",
        },
      ]
    }
    ariaDescription="Modal description"
    fullScreen={true}
    onClose={[Function]}
    open={true}
    title="Modal Title"
  >
    <Portal
      containerInfo={
        <div>
          <div
            data-focus-guard="true"
            style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
            tabindex="0"
          />
          <div
            data-focus-guard="true"
            style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
            tabindex="1"
          />
          <div
            data-focus-lock-disabled="false"
          >
            <div
              aria-describedby="Modal description"
              aria-labelledby="Modal Title"
              class="modal__wrapper modal__wrapper--backdrop"
              role="dialog"
            >
              <div
                class="modal"
              >
                <header
                  class="modal__inner"
                >
                  <h1
                    class="modal__title"
                  >
                    Modal Title
                  </h1>
                </header>
                <section
                  class="modal__inner"
                >
                  <p
                    class="c-steel"
                  >
                    Modal Content
                  </p>
                </section>
                <footer
                  class="modal__footer bg-primary-lighter"
                >
                  <div
                    class="modal__button-group"
                  >
                    <div
                      class="modal__button_item"
                    >
                      <button
                        class="button cancel"
                      >
                        Cancel
                      </button>
                    </div>
                    <div
                      class="modal__button_item"
                    >
                      <button
                        class="button primary"
                      >
                        Submit
                      </button>
                    </div>
                  </div>
                </footer>
                <button
                  aria-label="Close"
                  class="modal__close"
                  tabindex="0"
                >
                  <span
                    class="ui-icon ui-medium"
                  >
                    <svg>
                      <use
                        xlink:href="#i-close"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            data-focus-guard="true"
            style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
            tabindex="0"
          />
        </div>
      }
    >
      <ForwardRef>
        <ForwardRef
          as="div"
          autoFocus={true}
          crossFrame={true}
          disabled={false}
          lockProps={Object {}}
          noFocusGuards={false}
          persistentFocus={false}
          returnFocus={false}
          sideCar={[Function]}
        >
          <div
            data-focus-guard={true}
            key="guard-first"
            style={
              Object {
                "height": "0px",
                "left": "1px",
                "overflow": "hidden",
                "padding": 0,
                "position": "fixed",
                "top": "1px",
                "width": "1px",
              }
            }
            tabIndex={0}
          />
          <div
            data-focus-guard={true}
            key="guard-nearest"
            style={
              Object {
                "height": "0px",
                "left": "1px",
                "overflow": "hidden",
                "padding": 0,
                "position": "fixed",
                "top": "1px",
                "width": "1px",
              }
            }
            tabIndex={1}
          />
          <SideEffect(FocusWatcher)
            autoFocus={true}
            crossFrame={true}
            disabled={false}
            id={Object {}}
            observed={
              <div
                data-focus-lock-disabled="false"
              >
                <div
                  aria-describedby="Modal description"
                  aria-labelledby="Modal Title"
                  class="modal__wrapper modal__wrapper--backdrop"
                  role="dialog"
                >
                  <div
                    class="modal"
                  >
                    <header
                      class="modal__inner"
                    >
                      <h1
                        class="modal__title"
                      >
                        Modal Title
                      </h1>
                    </header>
                    <section
                      class="modal__inner"
                    >
                      <p
                        class="c-steel"
                      >
                        Modal Content
                      </p>
                    </section>
                    <footer
                      class="modal__footer bg-primary-lighter"
                    >
                      <div
                        class="modal__button-group"
                      >
                        <div
                          class="modal__button_item"
                        >
                          <button
                            class="button cancel"
                          >
                            Cancel
                          </button>
                        </div>
                        <div
                          class="modal__button_item"
                        >
                          <button
                            class="button primary"
                          >
                            Submit
                          </button>
                        </div>
                      </div>
                    </footer>
                    <button
                      aria-label="Close"
                      class="modal__close"
                      tabindex="0"
                    >
                      <span
                        class="ui-icon ui-medium"
                      >
                        <svg>
                          <use
                            xlink:href="#i-close"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            }
            onActivation={[Function]}
            onDeactivation={[Function]}
            persistentFocus={false}
            returnFocus={[Function]}
            shards={Array []}
            sideCar={
              Object {
                "assignMedium": [Function],
                "assignSyncMedium": [Function],
                "options": Object {
                  "async": true,
                  "ssr": false,
                },
                "read": [Function],
                "useMedium": [Function],
              }
            }
          >
            <FocusWatcher
              autoFocus={true}
              crossFrame={true}
              disabled={false}
              id={Object {}}
              observed={
                <div
                  data-focus-lock-disabled="false"
                >
                  <div
                    aria-describedby="Modal description"
                    aria-labelledby="Modal Title"
                    class="modal__wrapper modal__wrapper--backdrop"
                    role="dialog"
                  >
                    <div
                      class="modal"
                    >
                      <header
                        class="modal__inner"
                      >
                        <h1
                          class="modal__title"
                        >
                          Modal Title
                        </h1>
                      </header>
                      <section
                        class="modal__inner"
                      >
                        <p
                          class="c-steel"
                        >
                          Modal Content
                        </p>
                      </section>
                      <footer
                        class="modal__footer bg-primary-lighter"
                      >
                        <div
                          class="modal__button-group"
                        >
                          <div
                            class="modal__button_item"
                          >
                            <button
                              class="button cancel"
                            >
                              Cancel
                            </button>
                          </div>
                          <div
                            class="modal__button_item"
                          >
                            <button
                              class="button primary"
                            >
                              Submit
                            </button>
                          </div>
                        </div>
                      </footer>
                      <button
                        aria-label="Close"
                        class="modal__close"
                        tabindex="0"
                      >
                        <span
                          class="ui-icon ui-medium"
                        >
                          <svg>
                            <use
                              xlink:href="#i-close"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              }
              onActivation={[Function]}
              onDeactivation={[Function]}
              persistentFocus={false}
              returnFocus={[Function]}
              shards={Array []}
              sideCar={
                Object {
                  "assignMedium": [Function],
                  "assignSyncMedium": [Function],
                  "options": Object {
                    "async": true,
                    "ssr": false,
                  },
                  "read": [Function],
                  "useMedium": [Function],
                }
              }
            />
          </SideEffect(FocusWatcher)>
          <div
            data-focus-lock-disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <div
              aria-describedby="Modal description"
              aria-labelledby="Modal Title"
              className="modal__wrapper modal__wrapper--backdrop"
              role="dialog"
            >
              <div
                className="modal"
              >
                <header
                  className="modal__inner"
                >
                  <h1
                    className="modal__title"
                  >
                    Modal Title
                  </h1>
                </header>
                <section
                  className="modal__inner"
                >
                  <p
                    className="c-steel"
                  >
                    Modal Content
                  </p>
                </section>
                <footer
                  className="modal__footer bg-primary-lighter"
                >
                  <div
                    className="modal__button-group"
                  >
                    <div
                      className="modal__button_item"
                      key="Cancel"
                    >
                      <button
                        className="button cancel"
                        onClick={[Function]}
                      >
                        Cancel
                      </button>
                    </div>
                    <div
                      className="modal__button_item"
                      key="Submit"
                    >
                      <button
                        className="button primary"
                        onClick={[Function]}
                      >
                        Submit
                      </button>
                    </div>
                  </div>
                </footer>
                <button
                  aria-label="Close"
                  className="modal__close"
                  onClick={[Function]}
                  tabIndex={0}
                >
                  <Icon
                    size="medium"
                    symbol="close"
                  >
                    <span
                      className="ui-icon ui-medium"
                    >
                      <svg>
                        <use
                          xlinkHref="#i-close"
                        />
                      </svg>
                    </span>
                  </Icon>
                </button>
              </div>
            </div>
          </div>
          <div
            data-focus-guard={true}
            style={
              Object {
                "height": "0px",
                "left": "1px",
                "overflow": "hidden",
                "padding": 0,
                "position": "fixed",
                "top": "1px",
                "width": "1px",
              }
            }
            tabIndex={0}
          />
        </ForwardRef>
      </ForwardRef>
    </Portal>
  </Component>
  <InlineSVG
    cacheRequests={true}
    src="/images/icons.svg"
    uniquifyIDs={false}
  />
</div>
`;

exports[`Storyshots Modal/Modal Success Failure Modal 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <Component
    actions={
      Array [
        Object {
          "label": "Cancel",
          "onClick": [Function],
          "type": "failure",
        },
        Object {
          "label": "Submit",
          "onClick": [Function],
          "type": "success",
        },
      ]
    }
    ariaDescription="Modal description"
    onClose={[Function]}
    open={true}
    title="Modal Title"
  >
    <Portal
      containerInfo={
        <div>
          <div
            data-focus-guard="true"
            style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
            tabindex="0"
          />
          <div
            data-focus-guard="true"
            style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
            tabindex="1"
          />
          <div
            data-focus-lock-disabled="false"
          >
            <div
              aria-describedby="Modal description"
              aria-labelledby="Modal Title"
              class="modal__wrapper"
              role="dialog"
            >
              <div
                class="modal"
              >
                <header
                  class="modal__inner"
                >
                  <h1
                    class="modal__title"
                  >
                    Modal Title
                  </h1>
                </header>
                <section
                  class="modal__inner"
                >
                  <p
                    class="c-steel"
                  >
                    Modal Content
                  </p>
                </section>
                <footer
                  class="modal__footer bg-primary-lighter"
                >
                  <div
                    class="modal__button-group"
                  >
                    <div
                      class="modal__button_item"
                    >
                      <button
                        class="button failure"
                      >
                        Cancel
                      </button>
                    </div>
                    <div
                      class="modal__button_item"
                    >
                      <button
                        class="button success"
                      >
                        Submit
                      </button>
                    </div>
                  </div>
                </footer>
                <button
                  aria-label="Close"
                  class="modal__close"
                  tabindex="0"
                >
                  <span
                    class="ui-icon ui-medium"
                  >
                    <svg>
                      <use
                        xlink:href="#i-close"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            data-focus-guard="true"
            style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
            tabindex="0"
          />
        </div>
      }
    >
      <ForwardRef>
        <ForwardRef
          as="div"
          autoFocus={true}
          crossFrame={true}
          disabled={false}
          lockProps={Object {}}
          noFocusGuards={false}
          persistentFocus={false}
          returnFocus={false}
          sideCar={[Function]}
        >
          <div
            data-focus-guard={true}
            key="guard-first"
            style={
              Object {
                "height": "0px",
                "left": "1px",
                "overflow": "hidden",
                "padding": 0,
                "position": "fixed",
                "top": "1px",
                "width": "1px",
              }
            }
            tabIndex={0}
          />
          <div
            data-focus-guard={true}
            key="guard-nearest"
            style={
              Object {
                "height": "0px",
                "left": "1px",
                "overflow": "hidden",
                "padding": 0,
                "position": "fixed",
                "top": "1px",
                "width": "1px",
              }
            }
            tabIndex={1}
          />
          <SideEffect(FocusWatcher)
            autoFocus={true}
            crossFrame={true}
            disabled={false}
            id={Object {}}
            observed={
              <div
                data-focus-lock-disabled="false"
              >
                <div
                  aria-describedby="Modal description"
                  aria-labelledby="Modal Title"
                  class="modal__wrapper"
                  role="dialog"
                >
                  <div
                    class="modal"
                  >
                    <header
                      class="modal__inner"
                    >
                      <h1
                        class="modal__title"
                      >
                        Modal Title
                      </h1>
                    </header>
                    <section
                      class="modal__inner"
                    >
                      <p
                        class="c-steel"
                      >
                        Modal Content
                      </p>
                    </section>
                    <footer
                      class="modal__footer bg-primary-lighter"
                    >
                      <div
                        class="modal__button-group"
                      >
                        <div
                          class="modal__button_item"
                        >
                          <button
                            class="button failure"
                          >
                            Cancel
                          </button>
                        </div>
                        <div
                          class="modal__button_item"
                        >
                          <button
                            class="button success"
                          >
                            Submit
                          </button>
                        </div>
                      </div>
                    </footer>
                    <button
                      aria-label="Close"
                      class="modal__close"
                      tabindex="0"
                    >
                      <span
                        class="ui-icon ui-medium"
                      >
                        <svg>
                          <use
                            xlink:href="#i-close"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            }
            onActivation={[Function]}
            onDeactivation={[Function]}
            persistentFocus={false}
            returnFocus={[Function]}
            shards={Array []}
            sideCar={
              Object {
                "assignMedium": [Function],
                "assignSyncMedium": [Function],
                "options": Object {
                  "async": true,
                  "ssr": false,
                },
                "read": [Function],
                "useMedium": [Function],
              }
            }
          >
            <FocusWatcher
              autoFocus={true}
              crossFrame={true}
              disabled={false}
              id={Object {}}
              observed={
                <div
                  data-focus-lock-disabled="false"
                >
                  <div
                    aria-describedby="Modal description"
                    aria-labelledby="Modal Title"
                    class="modal__wrapper"
                    role="dialog"
                  >
                    <div
                      class="modal"
                    >
                      <header
                        class="modal__inner"
                      >
                        <h1
                          class="modal__title"
                        >
                          Modal Title
                        </h1>
                      </header>
                      <section
                        class="modal__inner"
                      >
                        <p
                          class="c-steel"
                        >
                          Modal Content
                        </p>
                      </section>
                      <footer
                        class="modal__footer bg-primary-lighter"
                      >
                        <div
                          class="modal__button-group"
                        >
                          <div
                            class="modal__button_item"
                          >
                            <button
                              class="button failure"
                            >
                              Cancel
                            </button>
                          </div>
                          <div
                            class="modal__button_item"
                          >
                            <button
                              class="button success"
                            >
                              Submit
                            </button>
                          </div>
                        </div>
                      </footer>
                      <button
                        aria-label="Close"
                        class="modal__close"
                        tabindex="0"
                      >
                        <span
                          class="ui-icon ui-medium"
                        >
                          <svg>
                            <use
                              xlink:href="#i-close"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              }
              onActivation={[Function]}
              onDeactivation={[Function]}
              persistentFocus={false}
              returnFocus={[Function]}
              shards={Array []}
              sideCar={
                Object {
                  "assignMedium": [Function],
                  "assignSyncMedium": [Function],
                  "options": Object {
                    "async": true,
                    "ssr": false,
                  },
                  "read": [Function],
                  "useMedium": [Function],
                }
              }
            />
          </SideEffect(FocusWatcher)>
          <div
            data-focus-lock-disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <div
              aria-describedby="Modal description"
              aria-labelledby="Modal Title"
              className="modal__wrapper"
              role="dialog"
            >
              <div
                className="modal"
              >
                <header
                  className="modal__inner"
                >
                  <h1
                    className="modal__title"
                  >
                    Modal Title
                  </h1>
                </header>
                <section
                  className="modal__inner"
                >
                  <p
                    className="c-steel"
                  >
                    Modal Content
                  </p>
                </section>
                <footer
                  className="modal__footer bg-primary-lighter"
                >
                  <div
                    className="modal__button-group"
                  >
                    <div
                      className="modal__button_item"
                      key="Cancel"
                    >
                      <button
                        className="button failure"
                        onClick={[Function]}
                      >
                        Cancel
                      </button>
                    </div>
                    <div
                      className="modal__button_item"
                      key="Submit"
                    >
                      <button
                        className="button success"
                        onClick={[Function]}
                      >
                        Submit
                      </button>
                    </div>
                  </div>
                </footer>
                <button
                  aria-label="Close"
                  className="modal__close"
                  onClick={[Function]}
                  tabIndex={0}
                >
                  <Icon
                    size="medium"
                    symbol="close"
                  >
                    <span
                      className="ui-icon ui-medium"
                    >
                      <svg>
                        <use
                          xlinkHref="#i-close"
                        />
                      </svg>
                    </span>
                  </Icon>
                </button>
              </div>
            </div>
          </div>
          <div
            data-focus-guard={true}
            style={
              Object {
                "height": "0px",
                "left": "1px",
                "overflow": "hidden",
                "padding": 0,
                "position": "fixed",
                "top": "1px",
                "width": "1px",
              }
            }
            tabIndex={0}
          />
        </ForwardRef>
      </ForwardRef>
    </Portal>
  </Component>
  <InlineSVG
    cacheRequests={true}
    src="/images/icons.svg"
    uniquifyIDs={false}
  />
</div>
`;
